--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,11 @@
 <html ng-app="bowling">
   <head>
     <title></title>
+    <link rel="stylesheet" href="/css/style.css" charset="utf-8">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
     <script src="js/app.js"></script>
-    <script src="models/BowlingGame.js"></script>
-    <script src="models/BowlingFrame.js"></script>
+    <script src="./../models/BowlingGame.js"></script>
+    <script src="../models/BowlingFrame.js"></script>
     <script src="js/controller.js"></script>
   </head>
   <body>
