--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,33 +1,27 @@
 <!DOCTYPE html>
-<html ng-app="bowling">
+<html>
   <head>
     <title></title>
     <link rel="stylesheet" href="/css/style.css" charset="utf-8">
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+    <script src="angular/angular.js"></script>
     <script src="js/app.js"></script>
-    <script src="./../models/BowlingGame.js"></script>
-    <script src="../models/BowlingFrame.js"></script>
-    <script src="js/controller.js"></script>
+    <script src="js/controllers/frameController.js"></script>
+    
   </head>
-  <body>
+  <body ng-app="bowling">
     <h1>Bowling Score Calculator</h1>
-    <div >
-    <form>
-
-    </form>
-    <div ng-controller="controller as game">
+    <div ng-controller="frameController as game">
         <table>
             <tr>
               <td></td>
             </tr>
             <tr>
-            <td ng-repeat="frame in game.scorecard">
-            Frame: [{{$index + 1}}] <p>{{ frame.score }}</p>
+            <td ng-repeat="frame in game.scoreCard">
+            Frame: [{{$index + 1}}] <p>{{ frame }}</p>
             </td>
           </tr>
         </table>
     </div>
-</div>
 
 
   </body>
