--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
     <script src="js/app.js"></script>
     <script src="js/models/BowlingFrame.js"></script>
     <script src="js/models/BowlingGame.js"></script>
+    <script src="js/helpers/setupGameService.js"></script>
     <script src="js/controllers/frameController.js"></script>
     <script src="js/helpers/rangeFilter.js"></script>
     <link rel="stylesheet" type="text/css" href="materialize/dist/css/materialize.css">
